# mmap-allocator

./: CMakeLists.txt  README.md
mmap-allocator/: CMakeLists.txt  allocator.cpp  allocator.hpp  mem-view.cpp  mem-view.hpp  pagesize.cpp  pagesize.hpp
play/: CMakeLists.txt  main.cpp
